--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- Подключение Bootstrap CSS через CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
 </head>
 <body>
-    
-    <div class="container">
-        <button id="triggerButton">Показать поповер</button>
-        <div id="popover" class="popover">
-          <h3 class="popover-title">Заголовок поповера</h3>
-          <p class="popover-content">Текст поповера</p>
-        </div>
-      </div>
 
+  <div class="container mt-5">
+    <button class="btn btn-primary triggerButton" data-bs-toggle="popover" data-bs-placement="top" data-bs-title="Заголовок поповера" data-bs-content="Текст поповера">Показать поповер</button>
+  </div>
+
+  <!-- Подключение Popper.js и Bootstrap JS через CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="index.js"></script>
+  
 </body>
 </html>
